--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -5,6 +5,8 @@
         "@types/node": "^18"
     },
     "dependencies": {
+        "@pulumi/azure-native": "^2.26.1",
+        "@pulumi/docker": "^4.5.1",
         "@pulumi/pulumi": "^3.0.0"
     }
 }
