--- a/infrastructure/Pulumi.prod.yaml
+++ b/infrastructure/Pulumi.prod.yaml
@@ -3,6 +3,7 @@ config:
   cst8918-a03-infra:appPath: ../
   cst8918-a03-infra:containerPort: '80'
   cst8918-a03-infra:cpu: '1'
+  cst8918-a03-infra:imageTag: v0.2.0
   cst8918-a03-infra:memory: '2'
   cst8918-a03-infra:prefixName: 'cst8918a03barb0238'
   cst8918-a03-infra:publicPort: '80'
